Task #0000:  Fixed status alignment

--- a/src/components/status-bar/StatusBar.module.css
+++ b/src/components/status-bar/StatusBar.module.css
@@ -11,6 +11,9 @@
   height: 1.5rem;
   min-height: 1.5rem;
   width: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .status_one_label {
